--- a/native_library/android/FirebaseANE/VisionBarcode/src/main/res/layout/activity_camera_preview.xml
+++ b/native_library/android/FirebaseANE/VisionBarcode/src/main/res/layout/activity_camera_preview.xml
@@ -11,8 +11,7 @@
         android:id="@+id/activity_camera_preview_mainview"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="start|top|end"
+        android:layout_gravity="start|center_vertical|end"
         tools:background="#000000"
         tools:visibility="visible" />
-
 </FrameLayout>
