--- a/native_library/android/FirebaseANE/VisionBarcode/src/main/res/layout/activity_camera_preview.xml
+++ b/native_library/android/FirebaseANE/VisionBarcode/src/main/res/layout/activity_camera_preview.xml
@@ -14,4 +14,10 @@
         android:layout_gravity="start|center_vertical|end"
         tools:background="#000000"
         tools:visibility="visible" />
+
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:src="@drawable/ic_barcode_scan" />
+
 </FrameLayout>
